Fix card layout bug for small phone. Fix scroll to bottom from dialog box link bug

--- a/src/app/features/dashboard/offers/offers-blue/bank-rating-dialog/bank-rating-dialog.component.scss
+++ b/src/app/features/dashboard/offers/offers-blue/bank-rating-dialog/bank-rating-dialog.component.scss
@@ -29,7 +29,9 @@
   justify-content: center;
 
   max-height: calc(100vh - 155px) !important;
-
+  background: white;
+  border-radius: 15px;
+  
   @media (max-width: 600px) {
     max-height: 500px;;
   }
