--- a/src/app/features/dashboard/offers/offers-blue/offer-card/offer-card.component.scss
+++ b/src/app/features/dashboard/offers/offers-blue/offer-card/offer-card.component.scss
@@ -382,8 +382,14 @@
           grid-row: 5;
 
           
+          
 
-
+          @media (max-width: 380px) {
+            .firstButton {
+              margin-bottom: 15px;
+            }
+          }
+          
           @media (max-width: 600px) {
             //Positional hack for details button
             position: relative;
